src/styles/index.css
/* NOTE: Within each section, rules are sorted ALPHABETICALLY. */
/* NOTE: Attributes are sorted in order of: 
- type
- id
- class
- user-def attributes
- src/links
- alt text
*/
/* || GENERAL - Variables and element tags */
body {
    background-color: var(--white);
}
h2 {
    color: var(--header-black);
    font-family: Verdana;
    font-size: 21px;
    font-weight: 100;
    margin: 10px 0px 8px;
}
header {
    display: block flex;
    justify-content: center;
    margin: 0px 0px 30px 0px;
    padding: 50px 0px 0px 0px;
    width: 100%;
}
main {
    display: block flex;
    justify-content: center;
    margin: 0px;
    width: 100%;
}
p {
    font-family: Verdana;
    font-size: 14px;
}
:root {
    --dark-grey: #747474;
    --header-black: #212121;
    --light-grey: #adadad;
    --orange: #f68721;
    --white: #fcfcfc;
}

/* || UTILITIES - Rules that flexibly apply to many elements */
.big-icon {
    width: 30px;
    height: auto;
}
.complete {
    text-decoration: line-through;
}
.dark-grey {
    color: var(--dark-grey);
}
.left {
    margin-left: 0%;
    margin-right: auto;
}
.light-grey {
    color: var(--light-grey);
}
.invis-btn {
    background: transparent;
    border: none;
    font-size: 0px;
}
.right {
    margin-left: auto;
    margin-right: 0%;
}
.sidebar {
    flex-shrink: 0;
    min-width: 150px;
    max-width: 150px;
}
.small-icon {
    width: 20px;
    height: auto;
}

/* || SPECIFIC - Rules for all other components, context-specific styles, children, etc. */
#doit-info > p {
    margin: 8px 0px 0px;
}
#doit-logo {
    height: 30px;
    width: auto;
}
#header-left {
    display: flex;
    justify-content: left;
}
#header-right {
    display: flex;
    justify-content: right;
}
#new-proj-btn {
    background-color: var(--orange);
    border: none;
    border-radius: 30px;
    color: var(--white);
    font-family: Verdana;
    font-size: 14px;
    padding: 13px 34px;
    text-align: center;
}
#new-proj-btn:hover {
    background-color: hsl(from var(--orange) h s calc(l - 15));
    cursor: pointer;
}
#new-proj-btn-sxn {
    display: flex;
    align-items: center;
}
.project {
    display: block flex;
}
.project-info > p {
    margin-top: 8px;
}
#projects-window {
    padding: 24px;
    width: 100%;
}

